--- a/Duration.xcodeproj/xcshareddata/xcschemes/Duration.xcscheme
+++ b/Duration.xcodeproj/xcshareddata/xcschemes/Duration.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "0820"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "071D19D01C94C93D00543F77"
-               BuildableName = "Duration.framework"
-               BlueprintName = "Duration"
+               BuildableName = "Duration iOS.framework"
+               BlueprintName = "Duration iOS"
                ReferencedContainer = "container:Duration.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "071D19DA1C94C93D00543F77"
-               BuildableName = "DurationTests.xctest"
-               BlueprintName = "DurationTests"
+               BuildableName = "Duration iOS Tests.xctest"
+               BlueprintName = "Duration iOS Tests"
                ReferencedContainer = "container:Duration.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -43,8 +43,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "071D19D01C94C93D00543F77"
-            BuildableName = "Duration.framework"
-            BlueprintName = "Duration"
+            BuildableName = "Duration iOS.framework"
+            BlueprintName = "Duration iOS"
             ReferencedContainer = "container:Duration.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,8 +65,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "071D19D01C94C93D00543F77"
-            BuildableName = "Duration.framework"
-            BlueprintName = "Duration"
+            BuildableName = "Duration iOS.framework"
+            BlueprintName = "Duration iOS"
             ReferencedContainer = "container:Duration.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,8 +83,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "071D19D01C94C93D00543F77"
-            BuildableName = "Duration.framework"
-            BlueprintName = "Duration"
+            BuildableName = "Duration iOS.framework"
+            BlueprintName = "Duration iOS"
             ReferencedContainer = "container:Duration.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
