--- a/Duration.xcodeproj/xcshareddata/xcschemes/DurationMac.xcscheme
+++ b/Duration.xcodeproj/xcshareddata/xcschemes/DurationMac.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "0820"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "071D19F11C94C95F00543F77"
                BuildableName = "Duration.framework"
-               BlueprintName = "DurationMac"
+               BlueprintName = "Duration macOS"
                ReferencedContainer = "container:Duration.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -34,8 +34,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "071D19FA1C94C95F00543F77"
-               BuildableName = "DurationMacTests.xctest"
-               BlueprintName = "DurationMacTests"
+               BuildableName = "Duration macOS Tests.xctest"
+               BlueprintName = "Duration macOS Tests"
                ReferencedContainer = "container:Duration.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -45,7 +45,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "071D19F11C94C95F00543F77"
             BuildableName = "Duration.framework"
-            BlueprintName = "DurationMac"
+            BlueprintName = "Duration macOS"
             ReferencedContainer = "container:Duration.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -67,7 +67,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "071D19F11C94C95F00543F77"
             BuildableName = "Duration.framework"
-            BlueprintName = "DurationMac"
+            BlueprintName = "Duration macOS"
             ReferencedContainer = "container:Duration.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -85,7 +85,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "071D19F11C94C95F00543F77"
             BuildableName = "Duration.framework"
-            BlueprintName = "DurationMac"
+            BlueprintName = "Duration macOS"
             ReferencedContainer = "container:Duration.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
