--- a/Duration.xcodeproj/xcshareddata/xcschemes/Duration macOS.xcscheme
+++ b/Duration.xcodeproj/xcshareddata/xcschemes/Duration macOS.xcscheme
@@ -7,57 +7,58 @@
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForAnalyzing = "YES"
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
-            buildForArchiving = "YES">
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "23A118CA53F65602517DD46A"
+               BuildableName = "Duration.framework"
                BlueprintName = "Duration macOS"
-               ReferencedContainer = "container:Duration.xcodeproj"
-               BuildableName = "Duration macOS.framework">
+               ReferencedContainer = "container:Duration.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
-            buildForAnalyzing = "NO"
             buildForTesting = "YES"
             buildForRunning = "NO"
             buildForProfiling = "NO"
-            buildForArchiving = "NO">
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
-               BuildableIdentifier = 'primary'
-               BlueprintIdentifier = 'DB330B21EE693926E00161A4'
-               BlueprintName = 'Duration macOS Tests'
-               ReferencedContainer = 'container:Duration.xcodeproj'
-               BuildableName = 'Duration macOS Tests.xctest'>
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DB330B21EE693926E00161A4"
+               BuildableName = "Duration macOS Tests.xctest"
+               BlueprintName = "Duration macOS Tests"
+               ReferencedContainer = "container:Duration.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug"
       codeCoverageEnabled = "YES">
-      <AdditionalOptions>
-      </AdditionalOptions>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
-               BuildableIdentifier = 'primary'
-               BlueprintIdentifier = 'DB330B21EE693926E00161A4'
-               BlueprintName = 'Duration macOS Tests'
-               ReferencedContainer = 'container:Duration.xcodeproj'
-               BuildableName = 'Duration macOS Tests.xctest'>
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DB330B21EE693926E00161A4"
+               BuildableName = "Duration macOS Tests.xctest"
+               BlueprintName = "Duration macOS Tests"
+               ReferencedContainer = "container:Duration.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -65,17 +66,25 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      buildConfiguration = "Debug"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "23A118CA53F65602517DD46A"
+            BuildableName = "Duration.framework"
+            BlueprintName = "Duration macOS"
+            ReferencedContainer = "container:Duration.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
+      shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      buildConfiguration = "Release"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      debugDocumentVersioning = "YES">
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
